# origin

./: RaceLib.lib
RaceSimulator/Project1/: Project1.sln
RaceSimulator/Project1/Project1/: Project1.vcxproj
RaceSimulator/RaceSimulator/: RaceSimulator.sln
RaceSimulator/RaceSimulator/RaceLib/: RaceLib.vcxproj  RaceLib.vcxproj.filters
RaceSimulator/RaceSimulator/RaceSimulator/: Functions.cpp  Functions.h  RaceSimulator.cpp  RaceSimulator.vcxproj  classAirRacer.cpp  classAirRacer.h  classBoots.cpp  classBoots.h  classBroom.cpp  classBroom.h  classCamel.cpp  classCamel.h  classCarpet.cpp  classCarpet.h  classCentaur.cpp  classCentaur.h  classCreateRacer.cpp  classCreateRacer.h  classEagle.cpp  classEagle.h  classFastCamel.cpp  classFastCamel.h  classGroundRacer.cpp  classGroundRacer.h  classRace.cpp  classRace.h  classRaceList.cpp  classRaceList.h
leson1_IDE/task1/ConsoleApplication1/: ConsoleApplication1.sln
lesson 10 CMake/task1 simpliest project/: CMakeLists.txt  Source.cpp
lesson 10 CMake/task2 more complex project/: CMakeLists.txt  Triangles.cpp  class_Equilateral_triangle.h  class_Figure.cpp  class_Isosceles_triangle.cpp  class_Parallelogram.cpp  class_Parallelogram.h  class_Quadrangle.h  class_Right_triangle.h  class_Square.cpp  class_Triangle.cpp  lesson6_task3.cpp
lesson 11 librarys/task 1 static lib/StaticLib/: StaticLib.sln
lesson 11 librarys/task 2 dynamic lib/DinamicLib/: DinamicLib.sln
lesson 11 librarys/task 3 dynamic lib CMake/CMakeProject1/: CMakeLists.txt  (+2 more)
lesson 11 librarys/task 5 class dll CMake/CMakeClassDll/: CMakeLists.txt  class_Equilateral_triangle.cpp  class_Equilateral_triangle.h  class_Figure.h  class_Quadrangle.cpp  class_Quadrangle.h  class_Rectangle.cpp  class_Rectangle.h  class_Rhombus.cpp  class_Right_triangle.h  class_Triangle.cpp
lesson 11 librarys/task 5 class dll CMake/CMakeClassDll/CMakeClassDll/: CMakeClassDll.cpp  CMakeClassDll.h  CMakeLists.txt
lesson 13 Find errors/ConsoleApplication1/: ConsoleApplication1.sln
lesson 14 tamplates/1/: 1.sln
lesson 14 tamplates/Project1/: Project1.sln
lesson 14 tamplates/Table/: Table.sln
lesson 14 tamplates/squared/: squared.sln
lesson 14 tamplates/sum and count/: sum and count.sln
lesson 15 STL 1/STL1.1/: STL1.1.sln
lesson 15 STL 1/STL1.2/: STL1.2.sln
lesson 15 STL 1/STL1.3/: STL1.3.sln
lesson 16 STL2/STL 2.1/: STL 2.1.sln
lesson 16 STL2/STL2.2/: STL2.2.sln
lesson 6/task1/: lesson6_task1.sln
lesson 6/task2/: lesson6_task2.sln
lesson 7/task1/: task1.sln
lesson 7/task2/: task2.sln
lesson17 smart pointers/copy/: copy.sln
lesson17 smart pointers/fix error/: fix error.sln
lesson17 smart pointers/own uniquePtr/: own uniquePtr.sln
lesson8/ConsoleApplication1/: ConsoleApplication1.sln
lesson8/task1/: ConsoleApplication1.sln
lesson8/task2/: lesson6_task3.sln
черновик/ConsoleApplication1/: ConsoleApplication1.sln
черновик/ConsoleApplication2/: ConsoleApplication2.sln
черновик/игра жизнь/: игра жизнь.sln
(+179 files in other folders)
