cmake_minimum_required(VERSION 3.22.0)
project(more_complex_project)
add_executable(test lesson6_task3.cpp class_Triangle.cpp class_Right_triangle.cpp class_Isosceles_triangle.cpp class_Equilateral_triangle.cpp class_Quadrangle.cpp class_Rectangle.cpp class_Square.cpp class_Parallelogram.cpp class_Rhombus.cpp) 

